# scop

./: CMakeLists.txt
include/: scop.hpp
src/: main.cpp
